# HackIT

./: .gitignore  AI_Report_smkm1surabaya_sch_id.md  AI_Report_tesla_com.md  ANALYSIS_SUMMARY.md  CODEBASE_ANALYSIS.md  CONFIG.md  DATAFLOW_ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENTATION.md  EXAMPLES.md  LICENSE-MIT  MANIFEST.md  MODULE_API_REFERENCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  README.md  TODO_170_PLAN.md  TOOLS_REFERENCE.txt  go.mod  hackit.sh  main.py  osint_report_Donald Trump.html  osint_report_Hanif Abdurrohim.html  requirements.txt  scan  setup.py  smart_analysis.json  strengthened_report.txt  tatus; git diff --name-only'  tier2_report.txt  tier3_report.txt  transform_nse.py  verify_go.py  vuln
hackit/bruteforcer/rust_engine/: Cargo.toml
hackit/bruteforcer/rust_engine/src/: main.rs
hackit/bruteforcer/rust_engine/src/core/: generator.rs  limiter.rs  mod.rs  pool.rs  proxy.rs
hackit/bruteforcer/rust_engine/src/protocols/: ftp.rs  http.rs  imap.rs  ldap.rs  mod.rs  mqtt.rs  mssql.rs  mysql.rs  pop3.rs  postgres.rs  rdp.rs  redis.rs  smb.rs  smtp.rs  snmp.rs  ssh.rs  telnet.rs  vnc.rs
hackit/dir_finder/rust_engine/: Cargo.toml
hackit/dir_finder/rust_engine/src/: config.rs  lib.rs  main.rs  scanner.rs
hackit/osint/go/rust_engine/: Cargo.toml
hackit/port_scanner/go/rust_engine/: Cargo.toml
hackit/port_scanner/go/rust_engine/probes/: ftp.json  https.json  mysql.json  postgres.json  ssh.json
hackit/port_scanner/go/rust_engine/src/: advanced_modules.rs  core_engine.rs  deep_scan.rs  evasion.rs  exploit_db.rs  fast_scanner.rs  ffi_probe.rs  lib.rs  masscan.rs  os_fingerprint.rs  probe_engine.rs  probe_loader.rs  probe_runner.rs  scanner_core.rs  secret_mapper.rs  shared.rs
hackit/port_scanner/go/rustsrc/: Cargo.toml
hackit/port_scanner/go/rustsrc/src/: dns_resolver.rs  http_probe.rs  main.rs  os.rs  os_detect.rs  ping_sweep.rs  rate.rs  scan.rs  script_engine.rs  syn.rs  syn_scanner.rs  tls_scanner.rs  vuln_check.rs
hackit/port_scanner/rust/: Cargo.toml
hackit/port_scanner/rust/src/: hyper_scan.rs  main.rs  os_detect.rs  syn_scanner.rs
hackit/rce_modul/rust/: Cargo.toml
hackit/rce_modul/rust/src/: main.rs  payloads.rs
hackit/ssl_tool/rust/: Cargo.toml
hackit/ssl_tool/rust/src/: analyzer.rs  cert.rs  cipher.rs  crypto.rs  dns.rs  http.rs  main.rs  port.rs  report.rs  tls_sim.rs  types.rs  vuln.rs
hackit/subdomain/go/rust_engine/: Cargo.toml
hackit/subdomain/go/rust_engine/src/: lib.rs  providers.rs
hackit/tech_hunter/go/rust_engine/: Cargo.toml
hackit/tech_hunter/go/rust_engine/src/: behavior.rs  bgp_analyzer.rs  crawler.rs  db_detector.rs  dns_analyzer.rs  dns_security.rs  fingerprint.rs  header_analyzer.rs  info_extractor.rs  intelligence.rs  lib.rs  metadata_extractor.rs  os_detector.rs  path_scanner.rs  port_analyzer.rs  server_analyzer.rs  subdomain_enum.rs  tls_analyzer.rs  tls_forensics.rs  vulnerability_matcher.rs  waf_detector.rs  whois_scanner.rs
hackit/tech_hunter/go/rust_engine/src/provide/: advanced_analyzer.rs  behavioral_fingerprint.rs  cloud_metadata_scanner.rs  expert_exploit_finder.rs  mod.rs  stealth_engine.rs
hackit/webUI/python/modules/rust_engine/: Cargo.toml
hackit/webUI/python/modules/rust_engine/src/: api_discovery.rs  asn_network.rs  breach_check.rs  cdn_discovery.rs  (+54 more)
hackit/web_fuzzer/rust/spider_core/: Cargo.toml
hackit/web_fuzzer/rust/spider_core/src/: crawler.rs  dom_analyzer.rs  harvester.rs  intel_engine.rs  logic.rs  main.rs  parser.rs  secret_finder.rs
hackit/wireless/c_core/: CMakeLists.txt  Makefile  deauth-inject  deauth_inject.c  eviltwin-inject  eviltwin_inject.c
hackit/wireless/c_core/build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
hackit/wireless/c_core/include/: adapter_detection.h  banner_grabber.h  beacon_flood.h  channel_hopper.h  client_probe.h  cpp_deauth_engine.h  cpp_deauth_ultra.h  crypto_security.h  deauth_engine.h  deauth_engine_v1.h  deauth_engine_v2.h  eapol_analyzer.h  eviltwin_cpp_v1.h  eviltwin_cpp_v2.h  eviltwin_cpp_v3.h  eviltwin_v1.h  eviltwin_v2.h  eviltwin_v3.h  frame_parser.h  interface_control.h  key_manager.h  offensive_core.h  offensive_plus.h  oui_lookup.h  packet_capture.h  packet_forge.h  packet_injector.h  pmkid_harvest.h  raw_networking.h  signal_processing.h  spectrum_scanner.h  syn_scanner.h  tcp_scanner.h  web_bridge.h  wep_cracker.h  wifi_stack.h  wireless_frame.h  wpa3_sae.h  wps_attack.h
hackit/wireless/c_core/src/: adapter_detection.c  aggressive_scanner.c  banner_grabber.c  beacon_flood.c  channel_hopper.c  client_probe.c  cpp_deauth_engine.cpp  cpp_deauth_ultra.cpp  crypto_security.c  deauth_engine.c  deauth_engine_v1.c  deauth_engine_v2.c  eapol_analyzer.cpp  eviltwin_cpp_v1.cpp  eviltwin_cpp_v2.cpp  eviltwin_cpp_v3.cpp  eviltwin_v1.c  eviltwin_v2.c  eviltwin_v3.c  frame_parser.cpp  interface_control.c  key_manager.cpp  offensive_core.c  offensive_plus.cpp  oui_lookup.c  packet_capture.c  packet_forge.cpp  packet_injector.c  pmkid_harvest.c  raw_networking.c  real_attack_engine.c  real_attack_engine.h  signal_processing.cpp  spectrum_scanner.cpp  ssid_discovery.c  syn_scanner.c  tcp_scanner.c  web_bridge_impl.c  wep_cracker.cpp  wifi_stack.c  (+3 more)
hackit/wireless/rust_engine/: Cargo.toml  build.rs  generate_recon.py
hackit/wireless/rust_engine/src/: adapter_manager.rs  advanced_ebpf.rs  aggressive_scanner.rs  airodump.rs  async_concurrency.rs  beacon_flood.rs  c_bindings.rs  captive_portal.rs  capture_engine.rs  crypto.rs  database.rs  deauth_massive.rs  deauth_ultra.rs  evil_twin.rs  eviltwin_v1.rs  eviltwin_v2.rs  eviltwin_v3.rs  handshake_capture.rs  http_api.rs  interface_control.rs  logging.rs  main.rs  network_recon.rs  network_stack.rs  offensive.rs  oui_lookup.rs  packet_capture.rs  packet_engine.rs  packet_parser.rs  pbkdf2_sha1.rs  pcap_wrapper.rs  plugin_engine.rs  port_scanner.rs  raw_injector.rs  real_deauth.rs  traffic_analyzer.rs  web_stream.rs  wep_engine.rs  wpa3_engine.rs  wps_attack.rs  (+1 more)
hackit/wireless/rust_engine/target_custom/: .rustc_info.json
(+1978 files in other folders)
