[package]
name = "keystrike_engine"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "keystrike"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.8"
ipnetwork = "0.20"
trust-dns-resolver = "0.23"

# Protocol-specific
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
suppaftp = "5"
ssh2 = "0.9"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql"] }
redis = { version = "0.25", features = ["tokio-comp"] }
ldap3 = { version = "0.12.1", default-features = false, features = ["sync", "tls-rustls-ring"] }
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tokio"] }
rumqttc = "0.24"
tokio-util = { version = "0.7", features = ["compat"] }
md-5 = "0.10"
