[package]
name = "rust_async_scanner"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "hyper_scan"
path = "src/hyper_scan.rs"

[[bin]]
name = "syn_scanner"
path = "src/syn_scanner.rs"

[[bin]]
name = "os_detect"
path = "src/os_detect.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
lazy_static = "1"
rand = "0.8"
nix = "0.26"
