[package]
name = "rce_engine"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
