[package]
name = "ssl_tool"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "worker_rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
time = "0.3"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1.10"
webpki-roots = "0.26"
x509-parser = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
trust-dns-resolver = "0.23"
trust-dns-proto = "0.23"
rayon = "1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
pem = "3"
