[package]
name = "hackit_wireless_engine"
version = "2.0.0"
edition = "2021"
authors = ["HackIT OSINT Framework"]
description = "Core wireless packet engine for HackIT penetration testing"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
etherparse = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
ctrlc = "3.4.4"
libc = "0.2"
pcap = { version = "1.2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8"
parking_lot = "0.12"

[features]
default = ["pcap"]
pcap = ["dep:pcap"]
# Build without default features to avoid wpcap.lib linking on Windows:
#   cargo build --no-default-features

[profile.release]
opt-level = "z"
codegen-units = 1
lto = false
panic = "abort"
