[package]
name = "rust_port_scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_port_scanner"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
lazy_static = "1.4"
serde_yaml = "0.9"
base64 = "0.22"

[features]
default = []
raw = ["pnet", "pcap"]

[dependencies.pnet]
version = "0.35"
optional = true

[dependencies.pcap]
version = "1.3"
optional = true
