[package]
name = "rust_port_scanner"
version = "3.0.0"
edition = "2021"
description = "HackIT Rust Engine — High-Performance Port Scanner with Multi-Engine Fusion"

[lib]
name = "rust_port_scanner"
crate-type = ["cdylib"]

[[bin]]
name = "hyper_scan"
path = "src/bin/hyper_scan.rs"

[[bin]]
name = "syn_scanner"
path = "src/bin/syn_scanner.rs"

[[bin]]
name = "os_detect"
path = "src/bin/os_detect.rs"

[[bin]]
name = "dns_detect"
path = "src/bin/dns_detect.rs"

[[bin]]
name = "web_fingerprint"
path = "src/bin/web_fingerprint.rs"

[[bin]]
name = "kernel_detect"
path = "src/bin/kernel_detect.rs"

[dependencies]
libc = "0.2"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
lazy_static = "1.4"
serde_yaml = "0.9"
base64 = "0.22"
futures = "0.3"
rand = "0.8"

[features]
default = []
raw = ["pnet", "pcap"]

[dependencies.pnet]
version = "0.35"
optional = true

[dependencies.pcap]
version = "1.3"
optional = true
