[package]
name = "rust_port_scanner"
version = "3.0.0"
edition = "2021"
description = "HackIT Rust Engine — High-Performance Port Scanner"

[lib]
name = "rust_port_scanner"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hyper_scan"
path = "src/bin/hyper_scan.rs"

[[bin]]
name = "syn_scanner"
path = "src/bin/syn_scanner.rs"

[[bin]]
name = "os_detect"
path = "src/bin/os_detect.rs"

[[bin]]
name = "dns_detect"
path = "src/bin/dns_detect.rs"

[[bin]]
name = "web_fingerprint"
path = "src/bin/web_fingerprint.rs"

[[bin]]
name = "kernel_detect"
path = "src/bin/kernel_detect.rs"

[[bin]]
name = "tcp_scanner"
path = "src/bin/tcp_scanner.rs"

[[bin]]
name = "hyper_parallel_tcp"
path = "src/bin/hyper_parallel_tcp.rs"

[[bin]]
name = "smart_service_detect"
path = "src/bin/smart_service_detect.rs"

[[bin]]
name = "dns_over_https"
path = "src/bin/dns_over_https.rs"

[[bin]]
name = "vuln_priority_scanner"
path = "src/bin/vuln_priority_scanner.rs"

[[bin]]
name = "real_time_monitor"
path = "src/bin/real_time_monitor.rs"

[[bin]]
name = "udp_scanner"
path = "src/bin/udp_scanner.rs"

[[bin]]
name = "service_detect"
path = "src/bin/service_detect.rs"

[[bin]]
name = "os_fingerprint"
path = "src/bin/os_fingerprint.rs"

[[bin]]
name = "dns_enum"
path = "src/bin/dns_enum.rs"

[[bin]]
name = "vuln_scan"
path = "src/bin/vuln_scan.rs"

[[bin]]
name = "mass_scan"
path = "src/bin/mass_scan.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "time", "sync", "macros", "io-util", "signal"] }
regex = "1.10"
lazy_static = "1.4"
serde_yaml = "0.9"
base64 = "0.22"
futures = "0.3"
rand = "0.8"
rayon = "1.8"
mimalloc = { version = "0.1", default-features = false }

[features]
default = []
raw = ["pnet", "pcap"]

[dependencies.pnet]
version = "0.35"
optional = true

[dependencies.pcap]
version = "1.3"
optional = true
