[package]
name = "portstorm-rust"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "portstorm-rust"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
lazy_static = "1"
rand = "0.8"
nix = "0.26"
rayon = "1"
clap = { version = "4", features = ["derive"] }
