[package]
name = "portstorm-rust"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "portstorm-rust"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
lazy_static = "1"
rand = "0.8"
nix = "0.26"
rayon = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
webpki-roots = "0.22"
ipnetwork = "0.20"
x509-parser = "0.15"
