[package]
name = "subdomain_rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
rayon = "1.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
trust-dns-resolver = "0.23"
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
