[package]
name = "subdomain_rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "subdomain_resolver"
path = "src/bin/subdomain_resolver.rs"

[[bin]]
name = "subdomain_osint"
path = "src/bin/subdomain_osint.rs"

[[bin]]
name = "subdomain_takeover"
path = "src/bin/subdomain_takeover.rs"

[dependencies]
libc = "0.2"
rayon = "1.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
trust-dns-resolver = "0.23"
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
