[package]
name = "tech_hunter_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls", "socks", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
url = "2.2"
murmur3 = "0.5"
base64 = "0.21"
regex = "1.5"
lazy_static = "1.4"
rand = "0.8"
rustls = "0.21"
native-tls = "0.2"
webpki-roots = "0.25"
trust-dns-resolver = "0.22"

[profile.release]
opt-level = 3
lto = true
