[package]
name = "spider_core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
regex = "1.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
scraper = "0.18"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
