[package]
name = "hackit_engine"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "hackit_engine"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
trust-dns-resolver = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = "0.23"
webpki-roots = "0.26"
sha2 = "0.10"
hex = "0.4"
regex = "1"
